Sutter Health/src/objects/Training_Material__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Deck, slides or Orientation material used for training purposes (can be internal payroll or external to employees).</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Article_Body__c</fullName>
        <description>The free text article content, which may contain URL links (URL of an article from one of the Content Management Systems (Sharepoint or PolicyStat)), and HTML rich text markup for formatting and readability.</description>
        <label>Article Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>&quot;Was this information helpful? What can we do to improve this article?&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments/Suggestions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Link__c</fullName>
        <formula>IF( CONTAINS($Profile.Name,&apos;Community&apos;) , &quot;Tell us what you think about this article!&quot; + BR() + HYPERLINK(&quot;/KM_Feedback_Community?articleNumber=&quot; + ArticleNumber +&quot;&amp;articleType=&quot; + TEXT(ArticleType) , &quot;Send us your feedback.&quot;,&quot;_Blank&quot;)+BR() +BR() + &quot; If you have a question or issue specific to you or your unique situation, please utilize Help/Service Requests on the bottom left of the screen&quot;, &quot;Tell us what you think about this article!&quot; + BR() + HYPERLINK(&quot;/apex/VFP18_KM_Feedback?articleNumber=&quot; + ArticleNumber +&quot;&amp;articleType=&quot; + TEXT(ArticleType) , &quot;Send us your feedback.&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <description>Keywords of a Knowledge Article</description>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Author__c</fullName>
        <label>Original Author</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Article_ID__c</fullName>
        <label>Production Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Is_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Menu__c</fullName>
        <label>Menu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Priority_End_On__c</fullName>
        <label>Priority End On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SH_Priority_Start_On__c</fullName>
        <label>Priority Start On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SH_SubMenu__c</fullName>
        <label>SubMenu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Function__c</fullName>
        <label>Sub-Function</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Training Material</label>
    <pluralLabel>Training Materials</pluralLabel>
</CustomObject>